# Rubik-s-Cube-Algorithm-Visualizer

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: main.h
src/: main.c
